# elevator-sim

./: .gitignore  LICENSE  Makefile  README.md  USAGE.md  pyproject.toml  requirements.md
docs/: evaluate-algorithms.md  mock-data-generator.md  simulation-loop.md  sky-lobby-implementation-plan.md
docs/algorithms/: nearest-car.md  round-robin.md  zone-dispatch.md  zoned-dispatch.md
evaluation_configs/: all_algo_side_by_side.json  nearest_car_diff_capacities.json  non_overlapping_zones.json  overlap_vs_non_overlap_zones.json  overlapping_zones.json  round_robin_diff_num_of_elevators.json
evaluation_results/: all_algo_side_by_side.md  nearest_car_diff_capacities.md  overlap_vs_non_overlap_zones.md  round_robin_diff_num_of_elevators.md
input/: MOCK_DATA.csv  mock_exponential.csv  mock_gaussian.csv  mock_uniform.csv  mock_work_day.csv  sample_requests.csv  sample_requests2.csv
src/elevator_sim/: __init__.py  config.py  main.py  simulation.py  stats.py
src/elevator_sim/algorithms/: __init__.py  base.py  nearest_car.py  round_robin.py  zoned_dispatch.py
src/elevator_sim/evaluate_algorithms/: display.py  main.py  runner.py
src/elevator_sim/io/: __init__.py  reader.py  writer.py
src/elevator_sim/mock_data/: generate.py
src/elevator_sim/models/: __init__.py  elevator.py  passenger.py
tests/: conftest.py  test_algorithms.py  test_simulation.py  test_stats.py
